--- a/src/app/database/database.component.scss
+++ b/src/app/database/database.component.scss
@@ -1,6 +1,4 @@
 :host {
-  display: block;
-  padding: .5rem;
   background-color: darken(#fafafa, 5%);
 
   .mat-display-1 {
