--- a/src/app/inputs/inputs.component.scss
+++ b/src/app/inputs/inputs.component.scss
@@ -1,8 +1,9 @@
 :host {
   display: block;
+  padding: .5rem;
 
   .mat-display-1 {
-    margin-bottom: 1rem;
+    margin-bottom: 0;
     font-size: 1.81rem;
     color: #c23d53;
   }
